[holo] settings updated

--- a/arcor2_AREditor/Packages/manifest.json
+++ b/arcor2_AREditor/Packages/manifest.json
@@ -28,6 +28,7 @@
     "com.unity.xr.arfoundation": "4.2.2",
     "com.unity.xr.arkit": "4.2.2",
     "com.unity.xr.arkit-face-tracking": "4.2.2",
+    "com.unity.xr.openxr": "1.5.3",
     "jillejr.newtonsoft.json-for-unity": "https://github.com/jilleJr/Newtonsoft.Json-for-Unity.git#upm",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -59,6 +60,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.microsoft.mixedreality.openxr": "file:MixedReality/com.microsoft.mixedreality.openxr-1.5.1.tgz"
   }
 }
